@@ -5,9 +5,11 @@ and quirks that I need to fix eventually.
 
 + before 4.1pre1:
 
+- offset manager: backwards gap movement
+- test tab expansion when printing
+- fix tom's bugs
 - color printing doesn't work
 - "=\'\" \\"
-- if a directory load fails, the parent dirs list gets messed up
 - soft wrap is still slow
 - change indentPrevLine to indentOneLine and indentSubsequentLines
 - minor quicknotepad changes -- update docs
