@@ -219,6 +219,11 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 		{
 			public void run()
 			{
+				// don't obscure existing message
+				if(message != null && message.getText() != null
+					&& !"".equals(message.getText()))
+					return;
+
 				int requestCount = threadPool.getRequestCount();
 				if(requestCount == 0)
 				{
