@@ -776,6 +776,8 @@ loop:			for(;;)
 	 */
 	public static boolean replaceAll(View view)
 	{
+		long start = System.currentTimeMillis();
+
 		int fileCount = 0;
 		int occurCount = 0;
 
@@ -856,11 +858,13 @@ loop:			while(path != null)
 			view.hideWaitCursor();
 		}
 
+		long time = (System.currentTimeMillis() - start);
 		/* Don't do this when playing a macro, cos it's annoying */
 		if(!BeanShell.isScriptRunning())
 		{
 			Object[] args = { new Integer(occurCount),
-				new Integer(fileCount) };
+				new Integer(fileCount),
+				new Long(time) };
 			view.getStatus().setMessageAndClear(jEdit.getProperty(
 				"view.status.replace-all",args));
 			if(occurCount == 0)
